{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 127,
  "lineage": "aad62ea2-fcf0-3733-8db5-e5fc7dd966e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Mumbai_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-057752b3f1d6c4d6c",
            "arn": "arn:aws:ec2:ap-south-1:356141839558:instance/i-012a5efd345b8fdfd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012a5efd345b8fdfd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Mumbai-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c7d139d79b8c8d8f",
            "private_dns": "ip-10-0-1-154.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.154",
            "public_ip": "3.110.106.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d16ebc90be5ae98e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbbdb18c34281a03",
            "tags": {
              "Name": "Ashu"
            },
            "tags_all": {
              "Name": "Ashu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b08498723cdc95b9"
            ]
          },
          "dependencies": [
            "aws_key_pair.Mumbai_keypair",
            "aws_security_group.mumbai_sg",
            "aws_subnet.Mumbai_01a",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Mumbai_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0183cfdb895e0ff29",
            "arn": "arn:aws:ec2:ap-south-1:356141839558:instance/i-0db58830656875e1d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db58830656875e1d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Mumbai-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fce4ba1ab1f96475",
            "private_dns": "ip-10-0-1-219.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.219",
            "public_ip": "13.233.109.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-063e9470d0c85daa2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbbdb18c34281a03",
            "tags": {
              "Name": "Ashu"
            },
            "tags_all": {
              "Name": "Ashu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b08498723cdc95b9"
            ]
          },
          "dependencies": [
            "aws_key_pair.Mumbai_keypair",
            "aws_security_group.mumbai_sg",
            "aws_subnet.Mumbai_01a",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Mumbai_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:356141839558:internet-gateway/igw-0339d37cdd2dc429c",
            "id": "igw-0339d37cdd2dc429c",
            "owner_id": "356141839558",
            "tags": {
              "Name": "mumbai_IG"
            },
            "tags_all": {
              "Name": "mumbai_IG"
            },
            "vpc_id": "vpc-0e8dedd6e2066d2ce"
          },
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Mumbai-LB-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:loadbalancer/app/Mumbai-LB-1/f71f38d2623d5b0f",
            "arn_suffix": "app/Mumbai-LB-1/f71f38d2623d5b0f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Mumbai-LB-1-1262921954.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:loadbalancer/app/Mumbai-LB-1/f71f38d2623d5b0f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Mumbai-LB-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b08498723cdc95b9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c29045284c3f7a64"
              },
              {
                "subnet_id": "subnet-0cbbdb18c34281a03"
              }
            ],
            "subnets": [
              "subnet-0c29045284c3f7a64",
              "subnet-0cbbdb18c34281a03"
            ],
            "tags": {
              "Environment": "Production"
            },
            "tags_all": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0e8dedd6e2066d2ce",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.mumbai_sg",
            "aws_subnet.Mumbai_01a",
            "aws_subnet.Mumbai_01b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mumbai_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:loadbalancer/app/mumbaiLB/099a2bffcd05f1ae",
            "arn_suffix": "app/mumbaiLB/099a2bffcd05f1ae",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mumbaiLB-326492766.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:loadbalancer/app/mumbaiLB/099a2bffcd05f1ae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mumbaiLB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b08498723cdc95b9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c29045284c3f7a64"
              },
              {
                "subnet_id": "subnet-0cbbdb18c34281a03"
              }
            ],
            "subnets": [
              "subnet-0c29045284c3f7a64",
              "subnet-0cbbdb18c34281a03"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0e8dedd6e2066d2ce",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.mumbai_sg",
            "aws_subnet.Mumbai_01a",
            "aws_subnet.Mumbai_01b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Mumbai-listener-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:listener/app/Mumbai-LB-1/f71f38d2623d5b0f/673624abcd2965f9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:targetgroup/Mumbai-TG-1/c7992fe9d0446241",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:listener/app/Mumbai-LB-1/f71f38d2623d5b0f/673624abcd2965f9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:loadbalancer/app/Mumbai-LB-1/f71f38d2623d5b0f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Mumbai-LB-1",
            "aws_lb_target_group.mumbai-TG-1",
            "aws_security_group.mumbai_sg",
            "aws_subnet.Mumbai_01a",
            "aws_subnet.Mumbai_01b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mumbai_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:listener/app/mumbaiLB/099a2bffcd05f1ae/7fc65d248c7f82e8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:targetgroup/card-website-terraform/8ddb6d2cd0744890",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:listener/app/mumbaiLB/099a2bffcd05f1ae/7fc65d248c7f82e8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:loadbalancer/app/mumbaiLB/099a2bffcd05f1ae",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mumbai_LB",
            "aws_lb_target_group.mumbai-tg",
            "aws_security_group.mumbai_sg",
            "aws_subnet.Mumbai_01a",
            "aws_subnet.Mumbai_01b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mumbai-TG-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:targetgroup/Mumbai-TG-1/c7992fe9d0446241",
            "arn_suffix": "targetgroup/Mumbai-TG-1/c7992fe9d0446241",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:targetgroup/Mumbai-TG-1/c7992fe9d0446241",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Mumbai-TG-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e8dedd6e2066d2ce"
          },
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mumbai-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:targetgroup/card-website-terraform/8ddb6d2cd0744890",
            "arn_suffix": "targetgroup/card-website-terraform/8ddb6d2cd0744890",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:targetgroup/card-website-terraform/8ddb6d2cd0744890",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "card-website-terraform",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e8dedd6e2066d2ce"
          },
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mumbai_tg-attach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:targetgroup/card-website-terraform/8ddb6d2cd0744890-20230703132938424100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:targetgroup/card-website-terraform/8ddb6d2cd0744890",
            "target_id": "i-012a5efd345b8fdfd"
          },
          "dependencies": [
            "aws_instance.Mumbai_instance",
            "aws_key_pair.Mumbai_keypair",
            "aws_lb_target_group.mumbai-tg",
            "aws_security_group.mumbai_sg",
            "aws_subnet.Mumbai_01a",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mumbai_tg-attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:targetgroup/card-website-terraform/8ddb6d2cd0744890-20230703132938475300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:356141839558:targetgroup/card-website-terraform/8ddb6d2cd0744890",
            "target_id": "i-0db58830656875e1d"
          },
          "dependencies": [
            "aws_instance.Mumbai_instance_2",
            "aws_key_pair.Mumbai_keypair",
            "aws_lb_target_group.mumbai-tg",
            "aws_security_group.mumbai_sg",
            "aws_subnet.Mumbai_01a",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Mumbai_Routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:356141839558:route-table/rtb-00156eb6096ab712b",
            "id": "rtb-00156eb6096ab712b",
            "owner_id": "356141839558",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0339d37cdd2dc429c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Mumbai_RT"
            },
            "tags_all": {
              "Name": "Mumbai_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8dedd6e2066d2ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Mumbai_IG",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai_01a_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e158cd0a4523e09",
            "route_table_id": "rtb-00156eb6096ab712b",
            "subnet_id": "subnet-0cbbdb18c34281a03"
          },
          "dependencies": [
            "aws_internet_gateway.Mumbai_IG",
            "aws_route_table.Mumbai_Routetable",
            "aws_subnet.Mumbai_01a",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai_01b_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9d555e6c205f06f",
            "route_table_id": "rtb-00156eb6096ab712b",
            "subnet_id": "subnet-0c29045284c3f7a64"
          },
          "dependencies": [
            "aws_internet_gateway.Mumbai_IG",
            "aws_route_table.Mumbai_Routetable",
            "aws_subnet.Mumbai_01b",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai_01c_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02540d53949540437",
            "route_table_id": "rtb-00156eb6096ab712b",
            "subnet_id": "subnet-0c080ca126043ff92"
          },
          "dependencies": [
            "aws_internet_gateway.Mumbai_IG",
            "aws_route_table.Mumbai_Routetable",
            "aws_subnet.Mumbai_01c",
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mumbai_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:356141839558:security-group/sg-0b08498723cdc95b9",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b08498723cdc95b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from pc",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Mumbai_SG",
            "name_prefix": "",
            "owner_id": "356141839558",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mumbai_SG"
            },
            "tags_all": {
              "Name": "mumbai_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8dedd6e2066d2ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Mumbai_01a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:356141839558:subnet/subnet-0cbbdb18c34281a03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbbdb18c34281a03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356141839558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai_01a"
            },
            "tags_all": {
              "Name": "Mumbai_01a"
            },
            "vpc_id": "vpc-0e8dedd6e2066d2ce"
          },
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Mumbai_01b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:356141839558:subnet/subnet-0c29045284c3f7a64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c29045284c3f7a64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356141839558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai_01b"
            },
            "tags_all": {
              "Name": "Mumbai_01b"
            },
            "vpc_id": "vpc-0e8dedd6e2066d2ce"
          },
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Mumbai_01c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:356141839558:subnet/subnet-0c080ca126043ff92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c080ca126043ff92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356141839558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Mumbai_01c"
            },
            "tags_all": {
              "Name": "Mumbai_01c"
            },
            "vpc_id": "vpc-0e8dedd6e2066d2ce"
          },
          "dependencies": [
            "aws_vpc.mumbai_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mumbai_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:356141839558:vpc/vpc-0e8dedd6e2066d2ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02067d8863dfaf0b4",
            "default_route_table_id": "rtb-0af459248fd0501b5",
            "default_security_group_id": "sg-061515fdba2997f1b",
            "dhcp_options_id": "dopt-02ba32414ae40e9af",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8dedd6e2066d2ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af459248fd0501b5",
            "owner_id": "356141839558",
            "tags": {
              "Name": "Mumbai_VPC"
            },
            "tags_all": {
              "Name": "Mumbai_VPC"
            }
          }
        }
      ]
    }
  ]
}